CUI-190 - Inline icons are not correctly aligned if line hight != 1.0

--- a/source/less/base/icons.less
+++ b/source/less/base/icons.less
@@ -38,6 +38,10 @@
 
     vertical-align: middle;
     text-align: center;
+
+    // position correction
+    position: relative;
+    top: 0.1em;
   }
 
   &:hover {
